<?xml version="1.0"?>
<package format="2">
  <name>io_controllers</name>
  <version>0.1.0</version>
  <description>The io_controllers package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="Mahmoud@Farshbaf.Net">Mahmoud Farshbaf</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>


<buildtool_depend>catkin</buildtool_depend>

<depend>controller_interface</depend>
<depend>hardware_interface</depend>
<depend>pluginlib</depend>
<depend>std_msgs</depend>
<depend>realtime_tools</depend>
<depend>roscpp</depend>
<depend>hardware_state_command_interfaces</depend>

<test_depend>rostest</test_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <controller_interface plugin="${prefix}/io_controllers_plugin.xml"/>
  </export>
</package>
